2012-02-18 Tamino Dauth <tamino@cdauth.eu>
* blp: Uses Boost pointer containers now.

2012-02-17 Tamino Dauth <tamino@cdauth.eu>
* Dropped transitive linking (which is default in CMake).

2012-02-12 Tamino Dauth <tamino@cdauth.eu>
* editor: Fixed enabling color palette and alpha channel actions in texture editor.
* editor: Fixed detection of save options for class Texture.

2012-02-06 Tamino Dauth <tamino@cdauth.eu>
* map: Fixed several bugs in reading process of class CustomUnits.

2012-02-04 Tamino Dauth <tamino@cdauth.eu>
* map: Separated class Value and added visitor classes.

2012-02-01 Tamino Dauth <tamino@cdauth.eu>
* editor: MpqPriorityList doesn't handle resource deletion anymore.
* map: Fixed modifications allocation of class CustomUnits.
* map: Improved Value usage.

2012-01-21 Tamino Dauth <tamino@cdauth.eu>
* editor: Editor::root() doesn't throw an exception on no render systems anymore.
* editor: Added texture editor MIME workaround.

2012-01-15 Tamino Dauth <tamino@cdauth.eu>
* map: Many formats are using std::vector now.
* editor: Revised class Resource.

2011-12-22 Tamino Dauth <tamino@cdauth.eu>
* Option MAP depends on BLP as well now.
* Replaced preprocessor errors by warnings which might make it easier to port wc3lib.
* editor: Fixed MpqPriorityList::tr() calls.

2011-11-25 Tamino Dauth <tamino@cdauth.eu>
* map: Improved parsing support in class Txt.

2011-10-28 Tamino Dauth <tamino@cdauth.eu>
* editor: Added class VariablesDialog.
* editor: Added class VariableDialog.
* Improved script "generateui.sh"
* editor: Initial variables support for trigger editor.
* map: Added class Txt.
* editor: MpqPriorityList supports reading *.txt files now by using KDE SC's KConfig class.
* map: Improved various classes.

2011-10-23 Tamino Dauth <tamino@cdauth.eu>
* map: Added class TriggerData.
* map: Revised many trigger related class to add trigger function parameter read support.

2011-10-22 Tamino Dauth <tamino@cdauth.eu>
* editor: Improved trigger editor.